--- a/style.css
+++ b/style.css
@@ -83,10 +83,10 @@ body {
       font-weight: 100;
 }
 
-.bitcoin-symbol {
+.B-outline {
       position: absolute;
       top: 0;
-      z-index: 12;
+      z-index: 22;
       width: 460px;
       left: 0;
       height: 460px;
@@ -94,7 +94,7 @@ body {
       clip-path: polygon(27% 28.5%, 39% 28%, 39% 18.5%, 46% 18.5%, 46% 28%, 49% 28%, 49% 18.5%, 56% 18.5%, 56% 81%, 49% 81%, 49% 72%, 46% 72%, 46% 81%, 40% 81%, 40% 72.5%, 28% 71.5%, 29% 64.5%, 35% 64.5%, 35% 35.5%, 27% 35.5%);
 }
 
-.bitcoin-symbol:after {
+.B-outline:after {
       content: '';
       position: absolute;
       top: 0; right: 0; bottom: 0; left: 0;
@@ -102,11 +102,11 @@ body {
       clip-path: polygon(28% 29.5%, 40% 29%, 40% 19.5%, 45% 19.5%, 45% 29%, 50% 29%, 50% 19.5%, 55% 19.5%, 55% 80%, 50% 80%, 50% 71%, 45% 71%, 45% 80%, 41% 80%, 41% 71.5%, 29.3% 70.5%, 30% 65.5%, 36% 65.5%, 36% 34.5%, 28% 34.5%);
 }
 
-.b-ellipse-1 {
+.B-ellipse-1 {
       position: absolute;
       top: 130px;
       left: 253px;
-      z-index: 12;
+      z-index: 22;
       margin: 0;
       width: 70px;
       height: 88px;
@@ -114,23 +114,23 @@ body {
       border-radius: 0px 157px 83px 0 / 0 140px 104px 0;
 }
 
-.b-ellipse-1:after {
+.B-ellipse-1:after {
       content: '';
       position: absolute;
       top: 4px;
       left: 0;
-      z-index: 11;
+      z-index: 22;
       width: calc(100% - 4px);
       height: calc(100% - 4px);
       background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);
       border-radius: 0px 157px 96px 0 / 0 140px 104px 0;
 }
 
-.b-ellipse-2 {
+.B-ellipse-2 {
       position: absolute;
       top: 215px;
       left: 253px;
-      z-index: 12;
+      z-index: 22;
       margin: 0;
       width: 83px;
       height: 115px;
@@ -138,17 +138,65 @@ body {
       border-radius: 0 73px 134px 0 / 0 89px 126px 0;
 }
 
-.b-ellipse-2:after {
+.B-ellipse-2:after {
       content: '';
       position: absolute;
       top: -1px;
       left: 0;
-      z-index: 11;
+      z-index: 22;
       width: calc(100% - 4px);
       height: calc(100% - 3px);
       background-image: linear-gradient(-20deg, #ae5c14 14%,#c46b17 50%, #8a430f 86%);
       border-radius: 0px 157px 68px 96px / 0 121px 99px 26px;
       border-radius: 0 90px 134px 0 / 0 93px 126px 0;
+}
+
+.B-hole-1 {
+      position: absolute;
+      top: 157px;
+      left: 206px;
+      z-index: 22;
+      margin: 0;
+      width: 65px;
+      height: 57px;
+      background: #f3cd44;
+      border-radius: 0px 173px 176px 0 / 0 132px 145px 0;
+}
+
+.B-hole-1:after {
+      content: '';
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      z-index: 22;
+      width: calc(100% - 8px);
+      height: calc(100% - 8px);
+      background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);
+      border-radius: 0px 177px 209px 0 / 0 152px 155px 0;
+}
+
+.B-hole-2 {
+      position: absolute;
+      top: 237px;
+      left: 206px;
+      z-index: 22;
+      margin: 0;
+      width: 80px;
+      height: 64px;
+      background: #f3cd44;
+      border-radius: 0px 121px 102px 0 / 0 73px 88px 0;
+}
+
+.B-hole-2:after {
+      content: '';
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      z-index: 22;
+      width: calc(100% - 8px);
+      height: calc(100% - 8px);
+      background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);
+      border-radius: 0px 140px 100px 0 / 0 71px 84px 0;
 }
 
 .path {
@@ -245,7 +293,29 @@ body {
       z-index: 11;    
 }
 
-.path-1:after, .path-2:after, .path-3:after, .path-4:after, .path-5:after, .path-6:after, .path-7:after, .path-8:after, .path-9:after, .path-10:after, .path-11:after  {
+.path-12{
+      top: 98px;
+      left: 98px;
+      width: 257px;      
+      height: 257px;
+      z-index: 11;    
+}
+.path-13 {
+      top: 103px;
+      left: 103px;
+      width: 257px;      
+      height: 257px;
+      z-index: 11;    
+}
+.path-14{
+      top: 108px;
+      left: 108px;
+      width: 257px;      
+      height: 257px;
+      z-index: 11;    
+}
+
+.path-1:after, .path-2:after, .path-3:after, .path-4:after, .path-5:after, .path-6:after, .path-7:after, .path-8:after, .path-9:after, .path-10:after, .path-11:after, .path-12:after, .path-13:after, .path-14:after  {
       clip-path: circle(50% at 50% 50%);
       content: '';
       position: absolute;
@@ -256,6 +326,132 @@ body {
       z-index: -1;
       margin: 1px 1px;
       background-image: linear-gradient(-20deg, #8a430f 15%,#c46b17 50%, #8a430f 86%);
+}
+
+.trapezoid-1 {
+      position: absolute;
+      top: 164px;
+      left: 68px;
+      width: 93px;
+      height: 132px;
+      z-index: 11;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 89% 29%, 75% 19%, 62% 32%, 60% 95%, 70% 99%, 77% 94%, 100% 94%);
+}
+
+.trapezoid-1:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 89% 30%, 74% 19%, 36% 57%, 20% 78%, 67% 99%, 76% 93%, 100% 93%);
+}
+
+.trapezoid-2 {
+      position: absolute;
+      top: 176px;
+      left: 68px;
+      width: 93px;
+      height: 115px;
+      z-index: 12;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 78% 29%, 59% 15%, 46% 30%, 46% 93%, 56% 100%, 65% 92%, 100% 92%);
+}
+
+.trapezoid-2:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 78% 30%, 57% 15%, 45% 29%, 45% 100%, 56% 99%, 64% 91%, 100% 91%);
+}
+
+.trapezoid-3 {
+      position: absolute;
+      top: 176px;
+      left: 68px;
+      width: 93px;
+      height: 132px;
+      z-index: 13;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 89% 29%, 73% 18%, 12% 57%, 18% 78%, 67% 100%, 76% 94%, 100% 94%);
+}
+
+.trapezoid-3:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 89% 30%, 73% 19%, 14% 57%, 19% 77%, 67% 99%, 76% 93%, 100% 93%);
+}
+
+.trapezoid-4 {
+      position: absolute;
+      top: 182px;
+      left: 68px;
+      width: 93px;
+      height: 132px;
+      z-index: 14;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 89% 29%, 73% 18%, 12% 57%, 18% 78%, 67% 100%, 76% 94%, 100% 94%);
+}
+
+.trapezoid-4:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 89% 30%, 73% 19%, 14% 57%, 19% 77%, 67% 99%, 76% 93%, 100% 93%);
+}
+
+.trapezoid-5 {
+      position: absolute;
+      top: 188px;
+      left: 68px;
+      width: 93px;
+      height: 132px;
+      z-index: 15;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 89% 29%, 73% 18%, 12% 57%, 18% 78%, 67% 100%, 76% 94%, 100% 94%);
+}
+
+.trapezoid-5:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 89% 30%, 73% 19%, 14% 57%, 19% 77%, 67% 99%, 76% 93%, 100% 93%);
+}
+
+.trapezoid-6 {
+      position: absolute;
+      top: 194px;
+      left: 68px;
+      width: 93px;
+      height: 132px;
+      z-index: 16;
+      clip-path: polygon(16% 0%, 100% 0%, 100% 9%, 11% 9.8%);
+      background: #cdf842;
+      clip-path: polygon(100% 29%, 89% 29%, 73% 18%, 12% 57%, 18% 78%, 67% 100%, 76% 94%, 100% 94%);
+}
+
+.trapezoid-6:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #c46b17;
+      clip-path: polygon(100% 30%, 89% 30%, 73% 19%, 14% 57%, 19% 77%, 67% 99%, 76% 93%, 100% 93%);
 }
 
 .dashed-border {
